[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/objects/fire-spinner/FireSpinner.gd" type="Script" id=1]
[ext_resource path="res://src/objects/fire-spinner/FireBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/fire-spinner/FireSpinnerBase.png" type="Texture" id=3]

[node name="FireSpinner" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]
rotation = 434.679

[node name="FireBall1" parent="Pivot" instance=ExtResource( 2 )]
visible = false
position = Vector2( 16, 0 )

[node name="FireBall2" parent="Pivot" instance=ExtResource( 2 )]
visible = false
position = Vector2( 32, 0 )

[node name="FireBall3" parent="Pivot" instance=ExtResource( 2 )]
visible = false
position = Vector2( 48, 0 )

[node name="FireBall4" parent="Pivot" instance=ExtResource( 2 )]
visible = false
position = Vector2( 64, 0 )
